<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--SplashActivity>-->
    <string name="alert_exit_title">温性提示</string>
    <string name="alert_exit_msg">内部发生错误，应用程序将自动退出.</string>
    <string name="alert_exit_positive">确定</string>

    <string name="title_canteen_intro1">快乐时刻在指尖</string>
    <string name="title_canteen_intro2">分享更具有意义</string>
    <string name="title_canteen_intro3">印象生活</string>
    <string name="description_canteen_intro1">一群志同道合的人，寻找快乐的源头，只要心怀感恩，快乐就无处不在</string>
    <string name="description_canteen_intro2">独乐乐，不如众乐乐，造起来吧，让我们一起感受生活的美好</string>
    <string name="description_canteen_intro3">好记忆不如烂笔头，记录生活点滴，印象生活，享受轻奢</string>
    <string name="get_start">开始</string>

    <string name="sign_in">登录账号</string>
    <string name="login">登录账号</string>
    <string name="register">创建用户</string>

    <string name="go">确定</string>

    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_password">密码</string>
    <string name="hint_email">邮箱或电话</string>
    <string name="hint_code">验证码</string>
    <string name="title_activity_eectivity">Sign in</string>
    <string name="next">下一步</string>
    <string name="get_code">获取验证码</string>
    <string name="agreement">创建帐户，表示您同意服务条款和隐私条款。</string>
    <string name="service_agreement">服务条款</string>
    <string name="private_agreement">隐私条款</string>
    <string name="already_have_account">已经拥有帐户？</string>
    <string name="email_error">邮箱或手机号不正确</string>
    <string name="password_error">密码不能少于6位数</string>

    <string name="create_account">创建用户</string>
    <string name="forgot_password">忘记密码</string>
    <string name="or">或</string>
    <string name="invalidate_email">邮箱或手机号不正确,请重填</string>
    <string name="snack_close">关闭</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>