<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/match_match"
    tools:context="com.pacific.lollipop.feature.auth.LoginFragment">

    <LinearLayout style="@style/auth_wrap_layout">

        <android.support.design.widget.TextInputLayout style="@style/match_wrap">

            <AutoCompleteTextView
                android:id="@+id/ac_email"
                style="@style/input_edit_no_padding"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/match_wrap">

            <EditText
                android:id="@+id/edit_password"
                style="@style/input_edit_no_padding"
                android:hint="@string/hint_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionGo"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/app_button"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/login" />

        <include
            android:id="@+id/create_account_view"
            layout="@layout/create_account" />
    </LinearLayout>
</ScrollView>
